--- a/FoodWasteSalling/Client/Pages/ProductOverview.razor.css
+++ b/FoodWasteSalling/Client/Pages/ProductOverview.razor.css
@@ -144,3 +144,34 @@ input[type=number]::-webkit-outer-spin-button {
     border-radius: 8px;
     border: 1px solid #ddd;
 }
+
+.sort-button {
+    background-color: #f0f0f0;
+    border: 1px solid #ccc;
+    padding: 5px 18px;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: all 0.2s ease;
+    font-weight: normal;
+    margin-left: 15px;
+}
+
+    .sort-button:hover {
+        background-color: #e0e0e0;
+        color: black;
+        transform: scale(1.02);
+    }
+
+.active-sort {
+    background-color: #007bff;
+    color: white;
+    border-color: #007bff;
+    font-weight: bold;
+    box-shadow: 0 0 6px rgba(0, 123, 255, 0.5);
+}
+
+    .active-sort:hover {
+        background-color: #007bff;
+        color: white;
+        transform: scale(1.02);
+    }
